--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,12 +1,34 @@
-
-<!-- 
-<app-login></app-login> -->
-<!-- <a routerLink="/mainmenu" routerLinkActive="active">Main Menu</a> -->
+<!-- <h2>{{Menu.name}} Details</h2>
 <div><span>id: </span>{{Menu.id}}</div>
-<div><span>name: </span>{{Menu.name}}</div>
+<div><span>name: </span>{{Menu.name}}</div> -->
 
 
 
-<!-- <a routerLink="/loginComponent" routerLinkActive="active">LOGIN</a> -->
 
-<a routerLink="/login" routerLinkActive="active">LOGIN</a>
+<div *ngFor="let Mainmenu of Menu"></div>
+
+
+<ul class="Menu">
+    <li>
+      {{Menu[0].name}}, {{Menu[0].id}}<a routerLink="/login" routerLinkActive="active">Login</a>
+    <li>
+      {{Menu[1].name}}, {{Menu[1].id}} <a routerLink="/login" routerLinkActive="active">Register</a>
+      <li>
+      {{Menu[2].name}}. {{Menu[2].id}} <a routerLink="/login" routerLinkActive="active">Buskers</a>
+    <li>
+      {{Menu[3].name}}, {{Menu[3].id}} <a routerLink="/login" routerLinkActive="active">Popular</a>
+      <li>
+        {{Menu[4].name}}, {{Menu[4].id}} <a routerLink="/login" routerLinkActive="active">Settings</a>
+  </li>
+  </ul>
+
+  <li *ngFor="menu"></li>
+
+
+
+  <ul class="Menu">
+    <li>
+      {{Menu}} 
+    <li>
+    </ul>
+
