--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+	background-color:#f4f4f4;
+	color:#555555;
+	
+	font-family: Arial, Helvetica, sans-serif;
+	font-size:20px;
+	font-weight: bold;
+	
+	/*same as above*/
+	/*font: normal 16px Arial,Helvetica,
+		  sans-serif;
+		  */
+		  
+	line-height:1.6em;
+	margin:0;
+
+}
