--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 <!-- <a routerLink="/mainmenu" routerLinkActive="active">MainMenu</a> -->
 <!-- <a routerLink="/login" routerLinkActive="active">LOGIN</a> -->
 
-<a routerLink="/mainmenu" routerLinkActive="active">Menu</a>
+<a>Hello World</a>
 <!-- { path: 'loginComponent', component: LoginComponent }, -->
 
 <router-outlet></router-outlet>
