--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -22,13 +22,16 @@
   </li>
   </ul>
 
-  <li *ngFor="menu"></li>
+
+<ul>
+  <li *ngFor="let menu of Menu"></li>
+</ul>
 
 
 
-  <ul class="Menu">
+  <!-- <ul class="Menu">
     <li>
-      {{Menu}} 
+      {{Menu.id}} 
     <li>
-    </ul>
+    </ul> -->
 
