cleaning up Role object

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,6 +9,6 @@
 </li>
 
 
-<li *ngIf="enableLinkForRole(role.USER)">
+<li *ngIf="enableLinkForRole(roleName.USER)">
     <a routerLink="/user" routerLinkActive="active" >User</a>
     </li>
