--- a/src/app/pages/profile-manager/profile-manager.component.html
+++ b/src/app/pages/profile-manager/profile-manager.component.html
@@ -16,7 +16,7 @@
     
     <label>
         First Name:
-        <input type="text" formControlName="lastName">
+        <input type="text" formControlName="firstName">
     </label>
 
     <label>
