--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,6 +13,6 @@
  <a routerLink="/registration" routerLinkActive="active"> Registration</a>
 </li>
 <li>
-<a routerLink="/profile-manager" routerLinkActive="active"> Profile Manager</a>
+<a routerLink="/user-manager" routerLinkActive="active"> User Manager</a>
 </li>
 
