--- a/src/ui/admin/admin.component.html
+++ b/src/ui/admin/admin.component.html
@@ -1,1 +1,41 @@
-<p>Are ye well</p>
+<form [formGroup] = "profileForm" (ngSubmit)="onSubmit()">
+
+
+<label>
+    Username:
+    <input type="text" formContolName="userName">
+  </label>
+
+  <label>
+   Active Users:
+    <input type="text" formContolName="activeUsers">
+</label>
+
+<div formGroupName="address">
+  <h3>Address</h3>
+
+  <label>
+    Street:
+    <input type="text" formControlName="street">
+  </label>
+
+  <label>
+    City:
+    <input type="text" formControlName="city">
+  </label>
+  
+  <label>
+    State:
+    <input type="text" formControlName="state">
+  </label>
+
+  <label>
+    Zip Code:
+    <input type="text" formControlName="zip">
+  </label>
+</div>
+
+<button type="submit" [disabled]="!profileForm.valid">SUBMIT</button>
+
+
+</form>
