Berlin 2021 - Getting Git

--- a/src/app/pages/profile-manager/user-manager.component.html
+++ b/src/app/pages/profile-manager/user-manager.component.html
@@ -45,4 +45,5 @@
     <button (click)="updateProfileForm()">Update</button>
 </div>
 
+<p>Pagination goes here</p>
 <app-user-pagination></app-user-pagination>
