--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+
 <li *ngIf="enableLinkForRole(roleName.USER)">
 <a routerLink="/user" routerLinkActive="active" >User</a>
 </li>
@@ -15,4 +16,6 @@
 <li>
 <a routerLink="/user-manager" routerLinkActive="active"> User Manager</a>
 </li>
-
+<li>
+    <a routerLink="/maps" routerLinkActive="active">Map</a>
+</li>
