--- a/src/app/pages/profile-manager/user-pagination/user-pagination.component.html
+++ b/src/app/pages/profile-manager/user-pagination/user-pagination.component.html
@@ -1,6 +1,6 @@
 <!-- <button (click)="getAll()" class= "pagin">Display Users</button> -->
 
-<tr *ngFor="let user of listOfUsers; let i=index" class="col-md-2" >
+<tr *ngFor="let user of listOfUsers| paginate: { itemsPerPage: itemsPerPage, currentPage: pageNumber }" class="col-md-2" >
     <td>
       {{user.id}}
     </td>
@@ -15,3 +15,32 @@
   </tr>
   <button (click)="downYaBoyo()" class= "pagin">Previous Page</button>
   <button (click)="hupYaBoyo()" class= "pagin">Next Page</button>
+  <button>{{pageNumber}}</button>
+
+<!-- 
+  <div>
+    <h1>NgFor Table Example</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Role</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let user of listOfUsers" let i="index">
+                <th>{{ user.id }}</th>
+                <td>{{ user.firstName }}</td>
+                <td>{{ user.lastName }}</td>
+                <td>{{ user.email }}</td>
+                
+                <td>
+                    <button type="button" >Delete</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div> -->
