--- a/src/app/maps/maps.component.css
+++ b/src/app/maps/maps.component.css
@@ -1,3 +1,25 @@
 .cursor {
     cursor: copy;
 }
+
+.map {
+    z-index: 1;
+}
+
+.hidden {
+    display: none;
+}
+
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(3px);
+    
+  }
+
+
